# ChangeLog for gnome-extra/gdesklets-core
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gdesklets-core/ChangeLog,v 1.35 2005/05/22 15:43:53 nixphoeni Exp $

  22 May 2005; Joe Sapp <nixphoeni@gentoo.org> gdesklets-core-0.34.3.ebuild:
  Added ~amd64 and ~sparc back to KEYWORDS

  22 May 2005; Joe Sapp <nixphoeni@gentoo.org>
  gdesklets-core-0.35_rc1.ebuild:
  Fixed SRC_URI

*gdesklets-core-0.35_rc1 (22 May 2005)

  22 May 2005; Joe Sapp <nixphoeni@gentoo.org>
  +gdesklets-core-0.35_rc1.ebuild:
  Bumped version, added ~amd64 and ~sparc back to KEYWORDS, removed
  dependencies, and changed an instance of "/usr/lib/gdesklets" to
  "/usr/$(get_libdir)/gdesklets"

  04 May 2005; David Holm <dholm@gentoo.org> gdesklets-core-0.34.3.ebuild:
  Readded to ~ppc

  28 Apr 2005; Joe Sapp <nixphoeni@gentoo.org> gdesklets-core-0.34.3.ebuild:
  Added pyxml dependency and expat >= 1.95.8

  19 Apr 2005; Joe Sapp <nixphoeni@gentoo.org> gdesklets-core-0.34.3.ebuild:
  Removed gdesklets-migration-tool message

*gdesklets-core-0.34.3 (19 Apr 2005)

  19 Apr 2005; Joe Sapp <nixphoeni@gentoo.org>
  +gdesklets-core-0.34.3.ebuild:
  Major new version (despite the version numbers)

*gdesklets-core-0.33.1 (23 Jan 2005)

  23 Jan 2005; Mike Gardiner <obz@gentoo.org> +gdesklets-core-0.33.1.ebuild:
  New version, ebuild updates thanks to Joe Sapp <nixphoeni@yahoo.com>, see
  bug #76468

*gdesklets-core-0.32 (14 Dec 2004)

  14 Dec 2004; Mike Gardiner <obz@gentoo.org> +gdesklets-core-0.32.ebuild:
  New version, should clear up any of the problems with 0.31.1

*gdesklets-core-0.31.1 (02 Dec 2004)

  02 Dec 2004; Mike Gardiner <obz@gentoo.org> +gdesklets-core-0.31.1.ebuild:
  New version, finally see bug #60282 for more

  16 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> gdesklets-core-0.26.1.ebuild:
  Unmasked on amd64.

*gdesklets-core-0.26.2 (13 Jul 2004)
