@@ -1,0 +1,2 @@
+MD5 1ba952f54d74c3b31732d0188b48512f gDesklets-0.35.tar.bz2 741056
+MD5 bba42e71aa3a0d310ad6ee763fcbac25 develbook.tar.bz2 445919
