@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gdesklets-core
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gdesklets-core/ChangeLog,v 1.35 2005/05/22 15:43:53 nixphoeni Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gdesklets-core/ChangeLog,v 1.36 2005/05/27 00:36:59 nixphoeni Exp $
+
+*gdesklets-core-0.35 (27 May 2005)
+
+  27 May 2005; Joe Sapp <nixphoeni@gentoo.org> +gdesklets-core-0.35.ebuild:
+  Version bump
 
   22 May 2005; Joe Sapp <nixphoeni@gentoo.org> gdesklets-core-0.34.3.ebuild:
   Added ~amd64 and ~sparc back to KEYWORDS
